login and registration added

--- a/virtual_environment/dolalash_website/members/templates/forgot-password.html
+++ b/virtual_environment/dolalash_website/members/templates/forgot-password.html
@@ -154,7 +154,10 @@
                 <span>Forgot Password</span>
                 <br />
               </span>
-              <form class="forgot-password-form">
+              <form class="forgot-password-form"
+                    method="POST"
+                    action="/reset_password/">
+                {% csrf_token %}
                 <span class="forgot-password-text07">
                   Enter the email address and we'll send you a link to reset
                   your password
@@ -167,14 +170,16 @@
                   </svg>
                   <input
                     type="email"
+                    name="email"
                     placeholder="Type your email"
                     class="forgot-password-textinput input"
                   />
                 </div>
                 <div class="forgot-password-container6">
-                  <a href="/" class="forgot-password-navlink1 button">
-                    <span>Reset Password</span>
-                  </a>
+                  <input type="submit"
+                         class="forgot-password-navlink1 button"
+                         value="Reset Password"
+                         />
                 </div>
                 <a
                   href="/log-in-and-sign-up-page"
