--- a/virtual_environment/dolalash_website/members/static/forms.css
+++ b/virtual_environment/dolalash_website/members/static/forms.css
@@ -31,7 +31,7 @@
   justify-content: space-between;
   background-color: var(--dl-color-gray-white);
 }
-.forms-container01 {
+.forms-container1 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   align-items: center;
@@ -115,7 +115,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.forms-container02 {
+.forms-container2 {
   width: 100%;
   display: flex;
   align-items: center;
@@ -221,18 +221,19 @@
   justify-content: center;
   background-color: var(--dl-color-gray-white);
 }
-.forms-container03 {
+.forms-container3 {
   width: 100%;
-  height: 1001px;
+  height: auto;
   display: flex;
   padding: var(--dl-space-space-threeunits);
   max-width: var(--dl-size-size-maxwidth);
-  align-items: flex-start;
+  align-self: center;
+  align-items: center;
   background-size: cover;
   justify-content: center;
   background-image: url('https://images.unsplash.com/photo-1630655491563-fe6ea47d06f5?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDV8fGV5ZWxhc2h8ZW58MHx8fHwxNjc0MzA1Mzcy&ixlib=rb-4.0.3&w=1400');
 }
-.forms-container04 {
+.forms-container4 {
   flex: 2;
   width: 50%;
   height: 828px;
@@ -241,9 +242,9 @@
   flex-direction: row;
   justify-content: center;
 }
-.forms-container05 {
+.forms-container5 {
   flex: 1;
-  height: 771px;
+  height: 521px;
   display: flex;
   max-width: 450px;
   box-shadow: 5px 5px 10px 0px #d4d4d4;
@@ -258,7 +259,7 @@
   justify-content: center;
   background-color: var(--dl-color-gray-white);
 }
-.forms-container05:hover {
+.forms-container5:hover {
   transform: scale(1.02);
 }
 .forms-text04 {
@@ -267,7 +268,7 @@
 }
 .forms-form {
   width: 394px;
-  height: 672px;
+  height: 443px;
   display: inline-block;
 }
 .forms-text07 {
@@ -276,7 +277,7 @@
   padding-left: 0px;
   padding-bottom: 0px;
 }
-.forms-container06 {
+.forms-container6 {
   flex: 0 0 auto;
   width: auto;
   height: 52px;
@@ -284,6 +285,14 @@
   margin-top: var(--dl-space-space-unit);
   align-items: flex-start;
   margin-bottom: var(--dl-space-space-unit);
+  justify-content: center;
+}
+.forms-container7 {
+  flex: 0 0 auto;
+  width: auto;
+  height: 52px;
+  display: flex;
+  align-items: flex-start;
   justify-content: center;
 }
 .forms-icon10 {
@@ -293,73 +302,11 @@
 }
 .forms-textinput {
   color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
-}
-.forms-text08 {
-  align-self: flex-start;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 0px;
-}
-.forms-container07 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  margin-top: var(--dl-space-space-unit);
-  align-items: flex-start;
-  margin-bottom: var(--dl-space-space-unit);
-  justify-content: center;
-}
-.forms-icon12 {
-  width: 24px;
-  height: 100%;
-  margin-right: var(--dl-space-space-halfunit);
-}
-.forms-textinput1 {
-  color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
-}
-.forms-text11 {
-  align-self: flex-start;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 0px;
-}
-.forms-container08 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  margin-top: var(--dl-space-space-unit);
-  align-items: flex-start;
-  margin-bottom: var(--dl-space-space-unit);
-  justify-content: center;
-}
-.forms-container09 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-.forms-icon14 {
-  width: 24px;
-  height: 100%;
-  margin-right: var(--dl-space-space-halfunit);
-}
-.forms-textinput2 {
-  color: var(--dl-color-gray-black);
   width: 361px;
   height: 52px;
   background-color: var(--dl-color-gray-900);
 }
-.forms-text14 {
+.forms-text10 {
   align-self: flex-start;
   padding-top: 0px;
   padding-left: 0px;
@@ -371,7 +318,7 @@
   margin-top: var(--dl-space-space-unit);
   margin-bottom: var(--dl-space-space-unit);
 }
-.forms-text17 {
+.forms-text13 {
   align-self: flex-start;
   margin-top: 0px;
   padding-top: 0px;
@@ -384,7 +331,7 @@
   margin-top: var(--dl-space-space-unit);
   margin-bottom: var(--dl-space-space-unit);
 }
-.forms-container10 {
+.forms-container8 {
   flex: 0 0 auto;
   width: 100%;
   height: 35px;
@@ -408,7 +355,7 @@
   background-color: var(--dl-color-gray-black);
 }
 @media(max-width: 991px) {
-  .forms-container01 {
+  .forms-container1 {
     display: none;
   }
   .forms-left {
@@ -431,13 +378,13 @@
   .forms-logo-center1 {
     margin-left: 0px;
   }
-  .forms-container03 {
+  .forms-container3 {
     height: 1150px;
     align-items: center;
     flex-direction: column;
     padding-bottom: 0px;
   }
-  .forms-container04 {
+  .forms-container4 {
     width: 100%;
   }
 }
@@ -491,14 +438,14 @@
     font-weight: 500;
     text-decoration: none;
   }
-  .forms-container03 {
+  .forms-container3 {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .forms-container04 {
+  .forms-container4 {
     flex-direction: column;
   }
-  .forms-container05 {
+  .forms-container5 {
     width: 100%;
     padding-top: var(--dl-space-space-twounits);
     margin-right: 0px;
@@ -510,13 +457,13 @@
     padding: var(--dl-space-space-unit);
     background-color: #ffffff;
   }
-  .forms-container01 {
+  .forms-container1 {
     background-color: #ffffff;
   }
   .forms-mobile-menu {
     padding: 16px;
   }
-  .forms-container03 {
+  .forms-container3 {
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
