added profile page and login checks

--- a/virtual_environment/dolalash_website/members/templates/forgot-password.html
+++ b/virtual_environment/dolalash_website/members/templates/forgot-password.html
@@ -53,7 +53,7 @@
               </div>
               <div class="forgot-password-icons">
                 <a
-                  href="/log-in-and-sign-up-page"
+                  href="/profile"
                   class="forgot-password-navlink"
                 >
                   <img
@@ -98,7 +98,7 @@
                     CONTACT
                   </a>
                   <a
-                    href="/log-in-and-sign-up-page"
+                    href="/profile"
                     class="forgot-password-profile"
                   >
                     PROFILE
@@ -182,7 +182,7 @@
                          />
                 </div>
                 <a
-                  href="/log-in-and-sign-up-page"
+                  href="/profile"
                   class="forgot-password-navlink2"
                 >
                   <span>&lt;Back to Login</span>
