--- a/virtual_environment/dolalash_website/members/templates/log-in-and-sign-up-page.html
+++ b/virtual_environment/dolalash_website/members/templates/log-in-and-sign-up-page.html
@@ -56,7 +56,7 @@
               </div>
               <div class="log-in-and-sign-up-page-icons">
                 <a
-                  href="/log-in-and-sign-up-page"
+                  href="/profile"
                   class="log-in-and-sign-up-page-navlink"
                 >
                   <img
@@ -123,7 +123,7 @@
                     CONTACT
                   </a>
                   <a
-                    href="/log-in-and-sign-up-page"
+                    href="/profile"
                     class="log-in-and-sign-up-page-profile"
                   >
                     PROFILE
