--- a/virtual_environment/dolalash_website/members/static/profile.css
+++ b/virtual_environment/dolalash_website/members/static/profile.css
@@ -31,7 +31,7 @@
   justify-content: space-between;
   background-color: var(--dl-color-gray-white);
 }
-.profile-container01 {
+.profile-container1 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   align-items: center;
@@ -115,7 +115,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.profile-container02 {
+.profile-container2 {
   width: 100%;
   display: flex;
   align-items: center;
@@ -217,6 +217,7 @@
 }
 .profile-blog {
   width: 100%;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
@@ -226,168 +227,109 @@
   flex-direction: column;
   justify-content: space-between;
 }
-.profile-container03 {
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  display: flex;
-  align-items: center;
-  margin-bottom: var(--dl-space-space-twounits);
-  flex-direction: column;
-  justify-content: space-between;
-}
-.profile-container04 {
+.profile-testimonial {
   width: 100%;
-  height: 720px;
   display: flex;
   padding: var(--dl-space-space-threeunits);
+  position: relative;
   max-width: var(--dl-size-size-maxwidth);
-  align-items: flex-start;
-  padding-bottom: 45px;
+  align-items: center;
+  flex-direction: column;
+}
+.profile-text04 {
+  color: var(--dl-color-gray-black);
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: 600;
+}
+.profile-blog-post-card {
+  width: 553px;
+  display: flex;
+  overflow: hidden;
+  max-width: var(--dl-size-size-maxwidth);
+  transition: 0.3s;
+  align-items: center;
+  flex-direction: column;
   justify-content: center;
 }
-.profile-container05 {
-  flex: 2;
-  width: 1081px;
-  height: 618px;
+.profile-blog-post-card:hover {
+  transform: scale(1.02);
+}
+.profile-image1 {
+  width: 100%;
+  height: 109px;
+  align-self: flex-start;
+  object-fit: cover;
+}
+.profile-container3 {
+  height: 419px;
+  display: flex;
+  padding: var(--dl-space-space-twounits);
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.profile-text05 {
+  color: var(--dl-color-gray-500);
+  font-weight: 700;
+  margin-bottom: var(--dl-space-space-halfunit);
+  text-transform: uppercase;
+}
+.profile-text06 {
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-bottom: var(--dl-space-space-twounits);
+}
+.profile-text07 {
+  color: var(--dl-color-gray-500);
+  font-weight: 400;
+  margin-bottom: var(--dl-space-space-twounits);
+}
+.profile-container4 {
+  width: 100%;
+  display: flex;
+  padding-top: var(--dl-space-space-unit);
+  border-color: var(--dl-color-gray-900);
+  border-width: 1px;
+  flex-direction: column;
+  justify-content: center;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 0px;
+}
+.profile-profile1 {
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
 }
-.profile-container06 {
-  width: auto;
-  height: 606px;
-  display: flex;
-  max-width: 450px;
-  box-shadow: 5px 5px 10px 0px #d4d4d4;
-  transition: 0.3s;
-  align-items: center;
-  padding-top: var(--dl-space-space-twounits);
-  margin-right: var(--dl-space-space-twounits);
-  padding-left: var(--dl-space-space-twounits);
-  padding-right: var(--dl-space-space-twounits);
-  flex-direction: column;
-  padding-bottom: var(--dl-space-space-twounits);
-  justify-content: center;
-  background-color: var(--dl-color-gray-white);
-}
-.profile-container06:hover {
-  transform: scale(1.02);
-}
-.profile-text04 {
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-.profile-form {
-  width: 377px;
-  height: 700px;
-  display: inline-block;
-}
-.profile-text07 {
-  align-self: flex-start;
-  padding-top: var(--dl-space-space-unit);
-  padding-left: var(--dl-space-space-unit);
-  padding-bottom: var(--dl-space-space-unit);
-}
-.profile-container07 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  margin: var(--dl-space-space-unit);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.profile-textinput {
-  color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
+.profile-image2 {
+  width: var(--dl-size-size-small);
+  height: var(--dl-size-size-small);
+  object-fit: cover;
+  border-radius: var(--dl-radius-radius-round);
 }
 .profile-text08 {
-  align-self: flex-start;
-  padding-top: var(--dl-space-space-unit);
-  padding-left: var(--dl-space-space-unit);
-  padding-bottom: var(--dl-space-space-unit);
-}
-.profile-container08 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  margin: var(--dl-space-space-unit);
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-.profile-textinput1 {
-  color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
+  font-weight: 300;
+  line-height: 2;
+  margin-left: var(--dl-space-space-halfunit);
 }
 .profile-text11 {
-  align-self: flex-start;
-  padding-top: var(--dl-space-space-unit);
-  padding-left: var(--dl-space-space-unit);
-  padding-bottom: var(--dl-space-space-unit);
+  font-weight: 300;
+  line-height: 2;
+  margin-left: var(--dl-space-space-halfunit);
 }
-.profile-container09 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  margin: var(--dl-space-space-unit);
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-.profile-textinput2 {
-  color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
-}
-.profile-text12 {
-  align-self: flex-start;
-  padding-top: var(--dl-space-space-unit);
-  padding-left: var(--dl-space-space-unit);
-  padding-bottom: var(--dl-space-space-unit);
-}
-.profile-container10 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  margin-top: var(--dl-space-space-unit);
-  align-items: flex-start;
-  margin-left: var(--dl-space-space-unit);
-  margin-right: var(--dl-space-space-unit);
-  margin-bottom: var(--dl-space-space-twounits);
-  justify-content: center;
-}
-.profile-textinput3 {
-  color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
-}
-.profile-container11 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 35px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
+.profile-text14 {
+  font-weight: 300;
+  line-height: 2;
+  margin-left: var(--dl-space-space-halfunit);
 }
 .profile-button {
-  color: var(--dl-color-gray-white);
-  width: 278px;
-  margin-top: 0px;
-  padding-top: 10px;
-  border-width: 0px;
-  padding-left: var(--dl-space-space-twounits);
-  padding-right: var(--dl-space-space-twounits);
-  padding-bottom: 10px;
-  justify-content: center;
-  background-color: var(--dl-color-gray-black);
+  font-style: normal;
+  text-align: center;
+  font-weight: 300;
+  border-color: var(--dl-color-gray-500);
+  border-radius: var(--dl-radius-radius-radius4);
 }
 .profile-banner {
   width: 100%;
@@ -407,24 +349,24 @@
   padding-bottom: var(--dl-space-space-sixunits);
   justify-content: space-between;
 }
-.profile-container12 {
+.profile-container5 {
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: flex-start;
   flex-direction: column;
 }
-.profile-text13 {
+.profile-text17 {
   margin-bottom: var(--dl-space-space-halfunit);
 }
-.profile-text14 {
+.profile-text18 {
   color: var(--dl-color-gray-black50);
   margin-top: var(--dl-space-space-oneandhalfunits);
 }
-.profile-text15 {
+.profile-text19 {
   color: var(--dl-color-gray-black50);
   margin-top: var(--dl-space-space-twounits);
 }
-.profile-text16 {
+.profile-text20 {
   color: var(--dl-color-gray-black50);
   margin-top: 12px;
 }
@@ -437,7 +379,7 @@
   justify-content: space-between;
 }
 @media(max-width: 991px) {
-  .profile-container01 {
+  .profile-container1 {
     display: none;
   }
   .profile-left {
@@ -460,38 +402,11 @@
   .profile-logo-center1 {
     margin-left: 0px;
   }
-  .profile-container04 {
-    align-items: center;
-    flex-direction: column;
+  .profile-text04 {
+    text-align: center;
   }
-  .profile-container05 {
-    width: 100%;
-    height: 908px;
-  }
-  .profile-container06 {
-    width: auto;
-    height: 574px;
-    padding-top: var(--dl-space-space-halfunit);
-    margin-right: 0px;
-    padding-bottom: 112px;
-  }
-  .profile-form {
-    height: 396px;
-  }
-  .profile-container07 {
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-container08 {
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-container09 {
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-container10 {
-    margin-top: var(--dl-space-space-unit);
-    margin-left: var(--dl-space-space-unit);
-    margin-right: var(--dl-space-space-unit);
-    margin-bottom: var(--dl-space-space-twounits);
+  .profile-image1 {
+    height: 350px;
   }
   .profile-footer {
     flex-direction: column-reverse;
@@ -554,62 +469,9 @@
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .profile-container04 {
+  .profile-testimonial {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
-  }
-  .profile-container05 {
-    height: 945px;
-    flex-direction: column;
-  }
-  .profile-container06 {
-    width: 592px;
-    height: 639px;
-    padding-top: 0px;
-    margin-right: 0px;
-    padding-left: 0px;
-    margin-bottom: 0px;
-    padding-right: 0px;
-    padding-bottom: 5px;
-  }
-  .profile-form {
-    width: 365px;
-    height: 503px;
-  }
-  .profile-text07 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-  .profile-container07 {
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-text08 {
-    padding: 0px;
-  }
-  .profile-container08 {
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-text11 {
-    padding: 0px;
-  }
-  .profile-container09 {
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-text12 {
-    padding: 0px;
-  }
-  .profile-container10 {
-    margin-top: var(--dl-space-space-unit);
-    margin-left: var(--dl-space-space-unit);
-    margin-right: var(--dl-space-space-unit);
-    margin-bottom: var(--dl-space-space-twounits);
-  }
-  .profile-container11 {
-    height: 36px;
-    margin: var(--dl-space-space-unit);
-  }
-  .profile-button {
-    margin: 0px;
   }
   .profile-banner {
     padding-left: var(--dl-space-space-twounits);
@@ -632,7 +494,7 @@
     padding: var(--dl-space-space-unit);
     background-color: #ffffff;
   }
-  .profile-container01 {
+  .profile-container1 {
     background-color: #ffffff;
   }
   .profile-mobile-menu {
@@ -644,14 +506,11 @@
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-twounits);
   }
-  .profile-container04 {
+  .profile-testimonial {
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-twounits);
-  }
-  .profile-form {
-    height: 499px;
   }
   .profile-banner {
     padding-top: var(--dl-space-space-twounits);
@@ -662,13 +521,13 @@
   .profile-footer {
     padding: var(--dl-space-space-unit);
   }
-  .profile-text14 {
+  .profile-text18 {
     color: var(--dl-color-gray-black50);
   }
-  .profile-text15 {
+  .profile-text19 {
     color: var(--dl-color-gray-black50);
   }
-  .profile-text16 {
+  .profile-text20 {
     color: var(--dl-color-gray-black50);
   }
   .profile-links-container {
