--- a/virtual_environment/dolalash_website/members/templates/profile.html
+++ b/virtual_environment/dolalash_website/members/templates/profile.html
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <!--button class="profile-button button">Edit</button>
+          <!--button class="profile-button button">Edit</button-->
         </div>
         <div class="profile-banner">
           <footer class="profile-footer">
